--- a/movicar/src/app/components/footer/footer.component.html
+++ b/movicar/src/app/components/footer/footer.component.html
@@ -1,3 +1,1 @@
-<div class="content-border-footer">
-    <div class="label-footer">Auto nuevo, corazón contento</div>
-</div>
+<div [ngClass]="{'label-footer-1': typeClass === 1, 'label-footer-2': typeClass === 2 }">Auto nuevo, corazón contento</div>
