--- a/movicar/src/app/components/footer/footer.component.scss
+++ b/movicar/src/app/components/footer/footer.component.scss
@@ -1,11 +1,4 @@
-.content-border-footer {
-    position: absolute;
-    width: 100%;
-    bottom: 60px;
-    border-bottom: 2px solid #E5E5E5;
-}
-
-.label-footer {
+.label-footer-1 {
     position: absolute;
     font-family: "openSans-ligth";
     font-weight: 400;
@@ -14,4 +7,18 @@
     text-align: center;
     color: #9AA0A4;
     width: 100%;
+    bottom: 0;
+    border-top: 2px solid #E5E5E5;
+}
+
+.label-footer-2 {
+    position: absolute;
+    font-family: "openSans-ligth";
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 70px;
+    text-align: center;
+    color: #FFFFFF;
+    width: 100%;
+    bottom: 0;
 }
