--- a/movicar/src/app/auth/exito-verificar/exito-verificar.component.html
+++ b/movicar/src/app/auth/exito-verificar/exito-verificar.component.html
@@ -1,1 +1,43 @@
-<p>exito-verificar works!</p>
+<div class="content1">
+    <app-header [type]="2"></app-header>
+    <div class="content2">
+        <div nz-row style="height: 100%">
+            <div nz-col nzXs="0" nzSm="0" nzMd="3" nzLg="3" nzXl="3">
+                <div class="column1">
+                    <img nz-image nzSrc="../../../assets/images/img_4.png" alt=""
+                        style="width: 100px; height: 152px;" />
+                </div>
+            </div>
+            <div nz-col nzXs="24" nzSm="24" nzMd="18" nzLg="18" nzXl="18">
+                <div class="column2">
+                    <div class="label-1">¡Bienvenido a Movi!</div>
+                    <div class="label-2">Estas a tres sencillos pasos de estrenar el auto de tus sueños</div>
+                    <div class="content-labels">
+                        <div class="spaces-labels">
+                            <img nz-image nzSrc="../../../assets/images/img_5.svg" style="width: 24px; height: 24px;" />
+                            <span class="label-3">Validaremos tu identidad</span>
+                        </div>
+                        <div class="spaces-labels">
+                            <img nz-image nzSrc="../../../assets/images/img_6.svg" style="width: 24px; height: 24px;" />
+                            <span class="label-3">Consultaremos tu buró de crédito</span>
+                        </div>
+                        <div class="spaces-labels">
+                            <img nz-image nzSrc="../../../assets/images/img_7.svg" style="width: 24px; height: 24px;" />
+                            <span class="label-3">Comprobaremos tus ingresos</span>
+                        </div>
+                    </div>
+                    <div class="label-4">Estás a tres sencillos pasos de estrenar el auto de tus sueños:</div>
+                    <button nz-button nzType="primary" type="submit" class="btn-submit">Crear cuenta</button>
+                    <div class="label-5">En otro momento</div>
+                </div>
+            </div>
+            <div nz-col nzXs="24" nzSm="24" nzMd="3" nzLg="3" nzXl="3">
+                <div class="column3">
+                    <img nz-image nzSrc="../../../assets/images/img_4.png" alt=""
+                        style="width: 100px; height: 152px;" />
+                </div>
+            </div>
+        </div>
+    </div>
+    <app-footer [type]="2"></app-footer>
+</div>
