--- a/movicar/src/app/auth/exito-verificar/exito-verificar.component.html
+++ b/movicar/src/app/auth/exito-verificar/exito-verificar.component.html
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="label-4">Estás a tres sencillos pasos de estrenar el auto de tus sueños:</div>
-                    <button nz-button nzType="primary" type="submit" class="btn-submit">Crear cuenta</button>
+                    <button nz-button nzType="primary" type="submit" class="btn-submit" (click)="btnCrearCuenta()">Crear cuenta</button>
                     <div class="label-5">En otro momento</div>
                 </div>
             </div>
