validacion file uploads

--- a/movicar/src/app/pages/onboarding/onboarding.component.html
+++ b/movicar/src/app/pages/onboarding/onboarding.component.html
@@ -56,7 +56,7 @@
                                     nz-image
                                     width="64px"
                                     height="64px"
-                                    nzSrc="{{ineFront}}"
+                                    nzSrc="{{ineBack}}"
                                     alt=""
                                     class="content-img"
                                 />
@@ -90,7 +90,7 @@
                                     nz-image
                                     width="64px"
                                     height="64px"
-                                    nzSrc="{{ineFront}}"
+                                    nzSrc="{{picture}}"
                                     alt=""
                                     class="content-img"
                                 />
